octolab_frontend/apps/octolab_mvp/infra/apps/guacamole/deployment-guacd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guacd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guacd
  template:
    metadata:
      labels:
        app: guacd
    spec:
      containers:
        - name: guacd
          image: guacamole/guacd:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4822
              name: guacd
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
