octolab_frontend/apps/octolab_mvp/infra/apps/guacamole/service-guac-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: guac-web
spec:
  type: ClusterIP
  selector:
    app: guac-web
  ports:
    - name: http
      port: 8080
      targetPort: 8080
